--- a/index.html
+++ b/index.html
@@ -6,131 +6,198 @@
     <title>ServiceNow Quiz Tool</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 20px;
+            font-family: 'Arial', sans-serif;
             background-color: #f4f4f4;
+            color: #333;
+            margin: 0;
+            padding: 0;
         }
-        h1 {
-            text-align: center;
-        }
-        .quiz-container {
-            max-width: 600px;
-            margin: 0 auto;
+
+        .container {
+            max-width: 800px;
+            margin: 50px auto;
             background-color: #fff;
             padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
+
+        h1 {
+            text-align: center;
+            font-size: 2.5em;
+            color: #007bff;
+        }
+
         .question {
-            margin-bottom: 20px;
+            margin: 20px 0;
         }
+
         .question h3 {
+            font-size: 1.2em;
             margin-bottom: 10px;
+            color: #333;
         }
+
         .question label {
             display: block;
-            margin-bottom: 5px;
-        }
-        button {
-            display: block;
-            width: 100%;
             padding: 10px;
-            background-color: #007bff;
-            color: #fff;
-            border: none;
+            border: 1px solid #ddd;
+            margin-bottom: 10px;
             border-radius: 5px;
+            background-color: #f9f9f9;
+            transition: background-color 0.3s ease;
             cursor: pointer;
         }
-        button:hover {
+
+        .question label:hover {
+            background-color: #f1f1f1;
+        }
+
+        .question input[type="radio"] {
+            display: none;
+        }
+
+        .submit-btn {
+            display: block;
+            width: 100%;
+            padding: 15px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            font-size: 1.2em;
+            cursor: pointer;
+            margin-top: 20px;
+            transition: background-color 0.3s ease;
+        }
+
+        .submit-btn:hover {
             background-color: #0056b3;
         }
-        .result {
-            margin-top: 20px;
+
+        .feedback {
+            margin-top: 10px;
+            font-size: 1.1em;
             padding: 10px;
-            background-color: #d4edda;
-            color: #155724;
-            border: 1px solid #c3e6cb;
             border-radius: 5px;
             display: none;
+        }
+
+        .feedback.correct {
+            background-color: #d4edda;
+            color: #155724;
+        }
+
+        .feedback.incorrect {
+            background-color: #f8d7da;
+            color: #721c24;
+        }
+
+        .highlight {
+            border-color: #28a745;
+            background-color: #d4edda;
+        }
+
+        .show-correct {
+            background-color: #fff3cd;
+            border-color: #ffeeba;
         }
     </style>
 </head>
 <body>
 
-    <h1>ServiceNow Quiz</h1>
-    <div class="quiz-container">
+    <div class="container">
+        <h1>ServiceNow Quiz</h1>
         <form id="quizForm">
 
-            <div class="question">
+            <div class="question" data-correct="c">
                 <h3>1. What does the "Client" option on a UI Action indicate?</h3>
                 <label><input type="radio" name="q1" value="a"> a) The action will execute server-side code.</label>
                 <label><input type="radio" name="q1" value="b"> b) The action will run a business rule before performing.</label>
                 <label><input type="radio" name="q1" value="c"> c) The action will run on the client-side, in the user's browser.</label>
                 <label><input type="radio" name="q1" value="d"> d) The action will execute immediately after saving the record.</label>
+                <div class="feedback"></div>
             </div>
 
-            <div class="question">
+            <div class="question" data-correct="c">
                 <h3>2. What is a Transform Map used for in ServiceNow?</h3>
                 <label><input type="radio" name="q2" value="a"> a) It schedules data imports from external sources.</label>
                 <label><input type="radio" name="q2" value="b"> b) It maps records from one ServiceNow instance to another.</label>
                 <label><input type="radio" name="q2" value="c"> c) It defines the relationship between fields in a data import and fields in a target table.</label>
                 <label><input type="radio" name="q2" value="d"> d) It manages the real-time syncing of data between multiple tables.</label>
+                <div class="feedback"></div>
             </div>
 
-            <div class="question">
+            <div class="question" data-correct="b">
                 <h3>3. What method is most useful for debugging a Client Script in ServiceNow?</h3>
                 <label><input type="radio" name="q3" value="a"> a) Adding log messages to the script using `gs.log()`.</label>
                 <label><input type="radio" name="q3" value="b"> b) Using the JavaScript Debugger in the browser's Developer Tools.</label>
                 <label><input type="radio" name="q3" value="c"> c) Checking the email logs for errors.</label>
                 <label><input type="radio" name="q3" value="d"> d) Running the Record Producer.</label>
+                <div class="feedback"></div>
             </div>
 
-            <div class="question">
+            <div class="question" data-correct="d">
                 <h3>4. What is an Event in ServiceNow?</h3>
                 <label><input type="radio" name="q4" value="a"> a) A scheduled job that runs a script periodically.</label>
                 <label><input type="radio" name="q4" value="b"> b) A server-side function that runs every time a record is created.</label>
                 <label><input type="radio" name="q4" value="c"> c) A notification sent to users whenever an important record is modified.</label>
                 <label><input type="radio" name="q4" value="d"> d) A mechanism for generating messages when specific conditions occur.</label>
+                <div class="feedback"></div>
             </div>
 
-            <div class="question">
+            <div class="question" data-correct="c">
                 <h3>5. What is the main purpose of an SLA in ServiceNow?</h3>
                 <label><input type="radio" name="q5" value="a"> a) To track the total number of requests submitted by a user.</label>
                 <label><input type="radio" name="q5" value="b"> b) To ensure that the system is running efficiently.</label>
                 <label><input type="radio" name="q5" value="c"> c) To ensure that the agreed service levels are met and tracked.</label>
                 <label><input type="radio" name="q5" value="d"> d) To monitor performance of the ServiceNow instance.</label>
+                <div class="feedback"></div>
             </div>
 
-            <button type="button" onclick="submitQuiz()">Submit</button>
+            <button type="button" class="submit-btn" onclick="submitQuiz()">Submit</button>
         </form>
-
-        <div class="result" id="result"></div>
     </div>
 
     <script>
         function submitQuiz() {
-            const correctAnswers = {
-                q1: 'c',
-                q2: 'c',
-                q3: 'b',
-                q4: 'd',
-                q5: 'c'
-            };
+            const questions = document.querySelectorAll('.question');
 
-            let score = 0;
-            const form = document.getElementById('quizForm');
-            const resultDiv = document.getElementById('result');
+            questions.forEach((question) => {
+                const selectedAnswer = question.querySelector('input[type="radio"]:checked');
+                const correctAnswer = question.getAttribute('data-correct');
+                const feedback = question.querySelector('.feedback');
+                const labels = question.querySelectorAll('label');
 
-            for (const question in correctAnswers) {
-                const answer = form[question].value;
-                if (answer === correctAnswers[question]) {
-                    score++;
+                // Reset styles
+                labels.forEach(label => {
+                    label.classList.remove('highlight');
+                });
+
+                if (selectedAnswer) {
+                    const userAnswer = selectedAnswer.value;
+                    if (userAnswer === correctAnswer) {
+                        feedback.textContent = "Correct!";
+                        feedback.className = "feedback correct";
+                        selectedAnswer.parentElement.classList.add('highlight'); // highlight correct answer
+                    } else {
+                        feedback.textContent = `Incorrect! The correct answer is ${correctAnswer}.`;
+                        feedback.className = "feedback incorrect";
+
+                        // Highlight correct answer
+                        labels.forEach(label => {
+                            if (label.querySelector('input').value === correctAnswer) {
+                                label.classList.add('show-correct');
+                            }
+                        });
+                    }
+                    feedback.style.display = 'block';
+                } else {
+                    feedback.textContent = "Please select an answer!";
+                    feedback.className = "feedback incorrect";
+                    feedback.style.display = 'block';
                 }
-            }
-
-            resultDiv.style.display = 'block';
-            resultDiv.innerText = `You scored ${score} out of 5!`;
+            });
         }
     </script>
 
