--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         }
 
         .question input[type="radio"] {
-            display: none;
+            margin-right: 10px;
         }
 
         .submit-btn {
@@ -112,46 +112,46 @@
 
             <div class="question" data-correct="c">
                 <h3>1. What does the "Client" option on a UI Action indicate?</h3>
-                <label><input type="radio" name="q1" value="a"> a) The action will execute server-side code.</label>
-                <label><input type="radio" name="q1" value="b"> b) The action will run a business rule before performing.</label>
-                <label><input type="radio" name="q1" value="c"> c) The action will run on the client-side, in the user's browser.</label>
-                <label><input type="radio" name="q1" value="d"> d) The action will execute immediately after saving the record.</label>
+                <label for="q1a"><input type="radio" name="q1" id="q1a" value="a"> a) The action will execute server-side code.</label>
+                <label for="q1b"><input type="radio" name="q1" id="q1b" value="b"> b) The action will run a business rule before performing.</label>
+                <label for="q1c"><input type="radio" name="q1" id="q1c" value="c"> c) The action will run on the client-side, in the user's browser.</label>
+                <label for="q1d"><input type="radio" name="q1" id="q1d" value="d"> d) The action will execute immediately after saving the record.</label>
                 <div class="feedback"></div>
             </div>
 
             <div class="question" data-correct="c">
                 <h3>2. What is a Transform Map used for in ServiceNow?</h3>
-                <label><input type="radio" name="q2" value="a"> a) It schedules data imports from external sources.</label>
-                <label><input type="radio" name="q2" value="b"> b) It maps records from one ServiceNow instance to another.</label>
-                <label><input type="radio" name="q2" value="c"> c) It defines the relationship between fields in a data import and fields in a target table.</label>
-                <label><input type="radio" name="q2" value="d"> d) It manages the real-time syncing of data between multiple tables.</label>
+                <label for="q2a"><input type="radio" name="q2" id="q2a" value="a"> a) It schedules data imports from external sources.</label>
+                <label for="q2b"><input type="radio" name="q2" id="q2b" value="b"> b) It maps records from one ServiceNow instance to another.</label>
+                <label for="q2c"><input type="radio" name="q2" id="q2c" value="c"> c) It defines the relationship between fields in a data import and fields in a target table.</label>
+                <label for="q2d"><input type="radio" name="q2" id="q2d" value="d"> d) It manages the real-time syncing of data between multiple tables.</label>
                 <div class="feedback"></div>
             </div>
 
             <div class="question" data-correct="b">
                 <h3>3. What method is most useful for debugging a Client Script in ServiceNow?</h3>
-                <label><input type="radio" name="q3" value="a"> a) Adding log messages to the script using `gs.log()`.</label>
-                <label><input type="radio" name="q3" value="b"> b) Using the JavaScript Debugger in the browser's Developer Tools.</label>
-                <label><input type="radio" name="q3" value="c"> c) Checking the email logs for errors.</label>
-                <label><input type="radio" name="q3" value="d"> d) Running the Record Producer.</label>
+                <label for="q3a"><input type="radio" name="q3" id="q3a" value="a"> a) Adding log messages to the script using `gs.log()`.</label>
+                <label for="q3b"><input type="radio" name="q3" id="q3b" value="b"> b) Using the JavaScript Debugger in the browser's Developer Tools.</label>
+                <label for="q3c"><input type="radio" name="q3" id="q3c" value="c"> c) Checking the email logs for errors.</label>
+                <label for="q3d"><input type="radio" name="q3" id="q3d" value="d"> d) Running the Record Producer.</label>
                 <div class="feedback"></div>
             </div>
 
             <div class="question" data-correct="d">
                 <h3>4. What is an Event in ServiceNow?</h3>
-                <label><input type="radio" name="q4" value="a"> a) A scheduled job that runs a script periodically.</label>
-                <label><input type="radio" name="q4" value="b"> b) A server-side function that runs every time a record is created.</label>
-                <label><input type="radio" name="q4" value="c"> c) A notification sent to users whenever an important record is modified.</label>
-                <label><input type="radio" name="q4" value="d"> d) A mechanism for generating messages when specific conditions occur.</label>
+                <label for="q4a"><input type="radio" name="q4" id="q4a" value="a"> a) A scheduled job that runs a script periodically.</label>
+                <label for="q4b"><input type="radio" name="q4" id="q4b" value="b"> b) A server-side function that runs every time a record is created.</label>
+                <label for="q4c"><input type="radio" name="q4" id="q4c" value="c"> c) A notification sent to users whenever an important record is modified.</label>
+                <label for="q4d"><input type="radio" name="q4" id="q4d" value="d"> d) A mechanism for generating messages when specific conditions occur.</label>
                 <div class="feedback"></div>
             </div>
 
             <div class="question" data-correct="c">
                 <h3>5. What is the main purpose of an SLA in ServiceNow?</h3>
-                <label><input type="radio" name="q5" value="a"> a) To track the total number of requests submitted by a user.</label>
-                <label><input type="radio" name="q5" value="b"> b) To ensure that the system is running efficiently.</label>
-                <label><input type="radio" name="q5" value="c"> c) To ensure that the agreed service levels are met and tracked.</label>
-                <label><input type="radio" name="q5" value="d"> d) To monitor performance of the ServiceNow instance.</label>
+                <label for="q5a"><input type="radio" name="q5" id="q5a" value="a"> a) To track the total number of requests submitted by a user.</label>
+                <label for="q5b"><input type="radio" name="q5" id="q5b" value="b"> b) To ensure that the system is running efficiently.</label>
+                <label for="q5c"><input type="radio" name="q5" id="q5c" value="c"> c) To ensure that the agreed service levels are met and tracked.</label>
+                <label for="q5d"><input type="radio" name="q5" id="q5d" value="d"> d) To monitor performance of the ServiceNow instance.</label>
                 <div class="feedback"></div>
             </div>
 
