--- a/index.html
+++ b/index.html
@@ -54,62 +54,19 @@
         }
 
         .question input[type="radio"] {
-            margin-right: 10px;
-        }
-
-        .submit-btn, .nav-btn {
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            font-size: 1.2em;
-            cursor: pointer;
-            margin-top: 20px;
-            transition: background-color 0.3s ease;
-        }
-
-        .submit-btn:hover, .nav-btn:hover {
-            background-color: #0056b3;
-        }
-
-        .feedback {
-            margin-top: 10px;
-            font-size: 1.1em;
-            padding: 10px;
-            border-radius: 5px;
             display: none;
         }
 
-        .feedback.correct {
+        .correct {
             background-color: #d4edda;
-            color: #155724;
-        }
-
-        .feedback.incorrect {
-            background-color: #f8d7da;
-            color: #721c24;
-        }
-
-        .highlight {
             border-color: #28a745;
-            background-color: #d4edda;
         }
 
-        .show-correct {
-            background-color: #fff3cd;
-            border-color: #ffeeba;
+        .incorrect {
+            background-color: #f8d7da;
+            border-color: #dc3545;
         }
 
-        .navigation {
-            display: flex;
-            justify-content: space-between;
-        }
-
-        .hidden {
-            display: none;
-        }
     </style>
 </head>
 <body>
@@ -119,102 +76,147 @@
         <form id="quizForm">
             <!-- Questions will be dynamically injected here -->
         </form>
-
-        <div class="navigation">
-            <button type="button" class="nav-btn" id="prevBtn" onclick="changePage(-1)">Previous</button>
-            <button type="button" class="nav-btn" id="nextBtn" onclick="changePage(1)">Next</button>
-        </div>
-
-        <button type="button" class="submit-btn hidden" id="submitBtn" onclick="submitQuiz()">Submit Quiz</button>
     </div>
 
     <script>
         const questions = [
-            { question: "1. What does the 'Client' option on a UI Action indicate?", options: ["The action will execute server-side code.", "The action will run a business rule before performing.", "The action will run on the client-side, in the user's browser.", "The action will execute immediately after saving the record."], correct: "2" },
-            { question: "2. What is a Transform Map used for in ServiceNow?", options: ["It schedules data imports from external sources.", "It maps records from one ServiceNow instance to another.", "It defines the relationship between fields in a data import and fields in a target table.", "It manages the real-time syncing of data between multiple tables."], correct: "2" },
-            { question: "3. What method is most useful for debugging a Client Script in ServiceNow?", options: ["Adding log messages to the script using `gs.log()`.", "Using the JavaScript Debugger in the browser's Developer Tools.", "Checking the email logs for errors.", "Running the Record Producer."], correct: "1" },
-            { question: "4. What is an Event in ServiceNow?", options: ["A scheduled job that runs a script periodically.", "A server-side function that runs every time a record is created.", "A notification sent to users whenever an important record is modified.", "A mechanism for generating messages when specific conditions occur."], correct: "3" },
-            { question: "5. What is the main purpose of an SLA in ServiceNow?", options: ["To track the total number of requests submitted by a user.", "To ensure that the system is running efficiently.", "To ensure that the agreed service levels are met and tracked.", "To monitor performance of the ServiceNow instance."], correct: "2" },
+            { 
+                question: "1. What does the 'Client' option on a UI Action indicate?", 
+                options: [
+                    { text: "The action will execute server-side code.", correct: false },
+                    { text: "The action will run a business rule before performing.", correct: false },
+                    { text: "The action will run on the client-side, in the user's browser.", correct: true },
+                    { text: "The action will execute immediately after saving the record.", correct: false }
+                ]
+            },
+            { 
+                question: "2. What is a Transform Map used for in ServiceNow?", 
+                options: [
+                    { text: "It schedules data imports from external sources.", correct: false },
+                    { text: "It maps records from one ServiceNow instance to another.", correct: false },
+                    { text: "It defines the relationship between fields in a data import and fields in a target table.", correct: true },
+                    { text: "It manages the real-time syncing of data between multiple tables.", correct: false }
+                ]
+            },
+            { 
+                question: "3. What method is most useful for debugging a Client Script in ServiceNow?", 
+                options: [
+                    { text: "Adding log messages to the script using `gs.log()`.", correct: false },
+                    { text: "Using the JavaScript Debugger in the browser's Developer Tools.", correct: true },
+                    { text: "Checking the email logs for errors.", correct: false },
+                    { text: "Running the Record Producer.", correct: false }
+                ]
+            },
+            { 
+                question: "4. What is an Event in ServiceNow?", 
+                options: [
+                    { text: "A scheduled job that runs a script periodically.", correct: false },
+                    { text: "A server-side function that runs every time a record is created.", correct: false },
+                    { text: "A notification sent to users whenever an important record is modified.", correct: false },
+                    { text: "A mechanism for generating messages when specific conditions occur.", correct: true }
+                ]
+            },
+            { 
+                question: "5. What is the main purpose of an SLA in ServiceNow?", 
+                options: [
+                    { text: "To track the total number of requests submitted by a user.", correct: false },
+                    { text: "To ensure that the system is running efficiently.", correct: false },
+                    { text: "To ensure that the agreed service levels are met and tracked.", correct: true },
+                    { text: "To monitor performance of the ServiceNow instance.", correct: false }
+                ]
+            },
+            { 
+                question: "6. What does a Data Policy do in ServiceNow?", 
+                options: [
+                    { text: "It controls the field's visibility in the form.", correct: false },
+                    { text: "It validates the data entered into a field.", correct: false },
+                    { text: "It enforces rules to ensure consistency of data across the application.", correct: true },
+                    { text: "It restricts access to the records based on user roles.", correct: false }
+                ]
+            },
+            { 
+                question: "7. What is the use of GlideRecord in ServiceNow?", 
+                options: [
+                    { text: "It is used to execute SQL queries on the database.", correct: false },
+                    { text: "It is a server-side object used to perform operations on a database table.", correct: true },
+                    { text: "It is used to handle client-side operations.", correct: false },
+                    { text: "It is used to manage workflows.", correct: false }
+                ]
+            },
+            { 
+                question: "8. What is the purpose of a UI Policy?", 
+                options: [
+                    { text: "To change field values on a form.", correct: false },
+                    { text: "To dynamically change the form's appearance or field behavior.", correct: true },
+                    { text: "To automate form submission.", correct: false },
+                    { text: "To create client-side rules for validating data.", correct: false }
+                ]
+            },
+            { 
+                question: "9. How do you add a new field to a ServiceNow form?", 
+                options: [
+                    { text: "Through a business rule.", correct: false },
+                    { text: "By customizing the form layout.", correct: false },
+                    { text: "By creating a UI action.", correct: false },
+                    { text: "By using a dictionary entry.", correct: true }
+                ]
+            },
+            { 
+                question: "10. What are ACLs used for in ServiceNow?", 
+                options: [
+                    { text: "To manage access to records in tables.", correct: true },
+                    { text: "To automate form submission.", correct: false },
+                    { text: "To enforce UI Policies.", correct: false },
+                    { text: "To log errors in the system.", correct: false }
+                ]
+            },
             // Add more questions here (30 total)
-            { question: "6. What does a Data Policy do in ServiceNow?", options: ["It controls the field's visibility in the form.", "It validates the data entered into a field.", "It enforces rules to ensure consistency of data across the application.", "It restricts access to the records based on user roles."], correct: "2" },
-            { question: "7. What is the use of GlideRecord in ServiceNow?", options: ["It is used to execute SQL queries on the database.", "It is a server-side object used to perform operations on a database table.", "It is used to handle client-side operations.", "It is used to manage workflows."], correct: "1" },
-            { question: "8. What is the purpose of a UI Policy?", options: ["To change field values on a form.", "To dynamically change the form's appearance or field behavior.", "To automate form submission.", "To create client-side rules for validating data."], correct: "1" },
-            { question: "9. How do you add a new field to a ServiceNow form?", options: ["Through a business rule.", "By customizing the form layout.", "By creating a UI action.", "By using a dictionary entry."], correct: "3" },
-            { question: "10. What are ACLs used for in ServiceNow?", options: ["To manage access to records in tables.", "To automate form submission.", "To enforce UI Policies.", "To log errors in the system."], correct: "0" },
-            // More difficult questions to cover all 30 questions for the quiz
-            // ...
         ];
 
-        let currentPage = 0;
-        const questionsPerPage = 5;
-        let answers = {};
+        const quizForm = document.getElementById("quizForm");
 
-        // Function to render the questions for the current page
-        function renderPage() {
-            const quizForm = document.getElementById("quizForm");
-            quizForm.innerHTML = '';
-
-            // Determine which questions to show on the current page
-            const start = currentPage * questionsPerPage;
-            const end = start + questionsPerPage;
-            const pageQuestions = questions.slice(start, end);
-
-            // Loop through questions for the current page and display them
-            pageQuestions.forEach((q, index) => {
-                const questionIndex = start + index; // Global question index
+        function renderQuiz() {
+            questions.forEach((q, index) => {
                 const questionDiv = document.createElement("div");
                 questionDiv.classList.add("question");
                 questionDiv.innerHTML = `
                     <h3>${q.question}</h3>
                     ${q.options.map((option, i) => `
-                        <label>
-                            <input type="radio" name="q${questionIndex}" value="${i}" ${answers[`q${questionIndex}`] === String(i) ? 'checked' : ''}>
-                            ${option}
+                        <label for="q${index}_opt${i}">
+                            <input type="radio" name="q${index}" id="q${index}_opt${i}" value="${i}">
+                            ${option.text}
                         </label>
                     `).join('')}
-                    <div class="feedback"></div>
                 `;
                 quizForm.appendChild(questionDiv);
-            });
 
-            // Update navigation buttons
-            document.getElementById("prevBtn").style.display = currentPage === 0 ? "none" : "inline-block";
-            document.getElementById("nextBtn").style.display = currentPage === Math.ceil(questions.length / questionsPerPage) - 1 ? "none" : "inline-block";
-            document.getElementById("submitBtn").classList.toggle("hidden", currentPage !== Math.ceil(questions.length / questionsPerPage) - 1);
+                // Add event listeners to the radio buttons
+                questionDiv.querySelectorAll('input[type="radio"]').forEach((input, optionIndex) => {
+                    input.addEventListener('change', function() {
+                        // Clear all labels
+                        questionDiv.querySelectorAll('label').forEach(label => {
+                            label.classList.remove('correct', 'incorrect');
+                        });
+
+                        // Check if the answer is correct
+                        if (q.options[optionIndex].correct) {
+                            this.parentElement.classList.add('correct');
+                        } else {
+                            this.parentElement.classList.add('incorrect');
+                            // Highlight the correct answer
+                            questionDiv.querySelectorAll('input[type="radio"]').forEach((opt, idx) => {
+                                if (q.options[idx].correct) {
+                                    opt.parentElement.classList.add('correct');
+                                }
+                            });
+                        }
+                    });
+                });
+            });
         }
 
-        // Function to handle page changes
-        function changePage(direction) {
-            // Save current answers
-            const currentQuestions = document.querySelectorAll(".question");
-            currentQuestions.forEach((q, index) => {
-                const questionIndex = currentPage * questionsPerPage + index;
-                const selectedAnswer = q.querySelector('input[type="radio"]:checked');
-                if (selectedAnswer) {
-                    answers[`q${questionIndex}`] = selectedAnswer.value;
-                }
-            });
-
-            // Change page
-            currentPage += direction;
-            renderPage();
-        }
-
-        // Function to submit the quiz
-        function submitQuiz() {
-            let score = 0;
-            Object.keys(answers).forEach((key, index) => {
-                const correctAnswer = questions[index].correct;
-                if (answers[key] === correctAnswer) {
-                    score++;
-                }
-            });
-
-            alert(`You scored ${score} out of ${questions.length}!`);
-        }
-
-        // Render the first page on load
-        renderPage();
+        // Render the quiz on page load
+        renderQuiz();
     </script>
 
 </body>
