--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         }
 
         .question input[type="radio"] {
-            display: none;
+            margin-right: 10px;
         }
 
         .correct {
